// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BraintreeAchFormFields Component should render form with business fields 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="dynamic-form-field dynamic-form-field--accountType"
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="accountType"
            id="accountType-label"
          >
            Account Type
          </label>
          <div
            class="dropdown-chevron"
          >
            <div
              class="icon"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
          <select
            aria-labelledby="accountType-label accountType-field-error-message"
            class="form-select optimizedCheckout-form-select"
            data-test="accountType-select"
            id="accountType"
            name="accountType"
          >
            <option
              value="Savings"
            >
              Savings
            </option>
            <option
              value="Checking"
            >
              Checking
            </option>
          </select>
        </div>
      </div>
      <div
        class="dynamic-form-field dynamic-form-field--accountNumber"
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="accountNumber"
            id="accountNumber-label"
          >
            Account Number
          </label>
          <input
            aria-labelledby="accountNumber-label accountNumber-field-error-message"
            class="form-input optimizedCheckout-form-input"
            data-test="accountNumber-text"
            id="accountNumber"
            max="9"
            min="8"
            name="accountNumber"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="dynamic-form-field dynamic-form-field--routingNumber"
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="routingNumber"
            id="routingNumber-label"
          >
            Routing Number
          </label>
          <input
            aria-labelledby="routingNumber-label routingNumber-field-error-message"
            class="form-input optimizedCheckout-form-input"
            data-test="routingNumber-text"
            id="routingNumber"
            name="routingNumber"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="dynamic-form-field dynamic-form-field--ownershipType"
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="ownershipType"
            id="ownershipType-label"
          >
            Ownership Type
          </label>
          <div
            class="dropdown-chevron"
          >
            <div
              class="icon"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
          <select
            aria-labelledby="ownershipType-label ownershipType-field-error-message"
            class="form-select optimizedCheckout-form-select"
            data-test="ownershipType-select"
            id="ownershipType"
            name="ownershipType"
          >
            <option
              value="Personal"
            >
              Personal
            </option>
            <option
              value="Business"
            >
              Business
            </option>
          </select>
        </div>
      </div>
      <div
        class="dynamic-form-field dynamic-form-field--businessName"
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="businessName"
            id="businessName-label"
          >
            Business Name
          </label>
          <input
            aria-labelledby="businessName-label businessName-field-error-message"
            class="form-input optimizedCheckout-form-input"
            data-test="businessName-text"
            id="businessName"
            name="businessName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="dynamic-form-field dynamic-form-field--accountType"
    >
      <div
        class="form-field"
      >
        <label
          class="form-label optimizedCheckout-form-label"
          for="accountType"
          id="accountType-label"
        >
          Account Type
        </label>
        <div
          class="dropdown-chevron"
        >
          <div
            class="icon"
          >
            <svg
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </div>
        <select
          aria-labelledby="accountType-label accountType-field-error-message"
          class="form-select optimizedCheckout-form-select"
          data-test="accountType-select"
          id="accountType"
          name="accountType"
        >
          <option
            value="Savings"
          >
            Savings
          </option>
          <option
            value="Checking"
          >
            Checking
          </option>
        </select>
      </div>
    </div>
    <div
      class="dynamic-form-field dynamic-form-field--accountNumber"
    >
      <div
        class="form-field"
      >
        <label
          class="form-label optimizedCheckout-form-label"
          for="accountNumber"
          id="accountNumber-label"
        >
          Account Number
        </label>
        <input
          aria-labelledby="accountNumber-label accountNumber-field-error-message"
          class="form-input optimizedCheckout-form-input"
          data-test="accountNumber-text"
          id="accountNumber"
          max="9"
          min="8"
          name="accountNumber"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="dynamic-form-field dynamic-form-field--routingNumber"
    >
      <div
        class="form-field"
      >
        <label
          class="form-label optimizedCheckout-form-label"
          for="routingNumber"
          id="routingNumber-label"
        >
          Routing Number
        </label>
        <input
          aria-labelledby="routingNumber-label routingNumber-field-error-message"
          class="form-input optimizedCheckout-form-input"
          data-test="routingNumber-text"
          id="routingNumber"
          name="routingNumber"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="dynamic-form-field dynamic-form-field--ownershipType"
    >
      <div
        class="form-field"
      >
        <label
          class="form-label optimizedCheckout-form-label"
          for="ownershipType"
          id="ownershipType-label"
        >
          Ownership Type
        </label>
        <div
          class="dropdown-chevron"
        >
          <div
            class="icon"
          >
            <svg
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </div>
        <select
          aria-labelledby="ownershipType-label ownershipType-field-error-message"
          class="form-select optimizedCheckout-form-select"
          data-test="ownershipType-select"
          id="ownershipType"
          name="ownershipType"
        >
          <option
            value="Personal"
          >
            Personal
          </option>
          <option
            value="Business"
          >
            Business
          </option>
        </select>
      </div>
    </div>
    <div
      class="dynamic-form-field dynamic-form-field--businessName"
    >
      <div
        class="form-field"
      >
        <label
          class="form-label optimizedCheckout-form-label"
          for="businessName"
          id="businessName-label"
        >
          Business Name
        </label>
        <input
          aria-labelledby="businessName-label businessName-field-error-message"
          class="form-input optimizedCheckout-form-input"
          data-test="businessName-text"
          id="businessName"
          name="businessName"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BraintreeAchFormFields Component should render form with personal fields 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="dynamic-form-field dynamic-form-field--accountType"
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="accountType"
            id="accountType-label"
          >
            Account Type
          </label>
          <div
            class="dropdown-chevron"
          >
            <div
              class="icon"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
          <select
            aria-labelledby="accountType-label accountType-field-error-message"
            class="form-select optimizedCheckout-form-select"
            data-test="accountType-select"
            id="accountType"
            name="accountType"
          >
            <option
              value="Savings"
            >
              Savings
            </option>
            <option
              value="Checking"
            >
              Checking
            </option>
          </select>
        </div>
      </div>
      <div
        class="dynamic-form-field dynamic-form-field--accountNumber"
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="accountNumber"
            id="accountNumber-label"
          >
            Account Number
          </label>
          <input
            aria-labelledby="accountNumber-label accountNumber-field-error-message"
            class="form-input optimizedCheckout-form-input"
            data-test="accountNumber-text"
            id="accountNumber"
            max="9"
            min="8"
            name="accountNumber"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="dynamic-form-field dynamic-form-field--routingNumber"
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="routingNumber"
            id="routingNumber-label"
          >
            Routing Number
          </label>
          <input
            aria-labelledby="routingNumber-label routingNumber-field-error-message"
            class="form-input optimizedCheckout-form-input"
            data-test="routingNumber-text"
            id="routingNumber"
            name="routingNumber"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="dynamic-form-field dynamic-form-field--ownershipType"
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="ownershipType"
            id="ownershipType-label"
          >
            Ownership Type
          </label>
          <div
            class="dropdown-chevron"
          >
            <div
              class="icon"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
          <select
            aria-labelledby="ownershipType-label ownershipType-field-error-message"
            class="form-select optimizedCheckout-form-select"
            data-test="ownershipType-select"
            id="ownershipType"
            name="ownershipType"
          >
            <option
              value="Personal"
            >
              Personal
            </option>
            <option
              value="Business"
            >
              Business
            </option>
          </select>
        </div>
      </div>
      <div
        class="dynamic-form-field dynamic-form-field--firstName"
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="firstName"
            id="firstName-label"
          >
            First Name
          </label>
          <input
            aria-labelledby="firstName-label firstName-field-error-message"
            class="form-input optimizedCheckout-form-input"
            data-test="firstName-text"
            id="firstName"
            name="firstName"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="dynamic-form-field dynamic-form-field--lastName"
      >
        <div
          class="form-field"
        >
          <label
            class="form-label optimizedCheckout-form-label"
            for="lastName"
            id="lastName-label"
          >
            Last Name
          </label>
          <input
            aria-labelledby="lastName-label lastName-field-error-message"
            class="form-input optimizedCheckout-form-input"
            data-test="lastName-text"
            id="lastName"
            name="lastName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="dynamic-form-field dynamic-form-field--accountType"
    >
      <div
        class="form-field"
      >
        <label
          class="form-label optimizedCheckout-form-label"
          for="accountType"
          id="accountType-label"
        >
          Account Type
        </label>
        <div
          class="dropdown-chevron"
        >
          <div
            class="icon"
          >
            <svg
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </div>
        <select
          aria-labelledby="accountType-label accountType-field-error-message"
          class="form-select optimizedCheckout-form-select"
          data-test="accountType-select"
          id="accountType"
          name="accountType"
        >
          <option
            value="Savings"
          >
            Savings
          </option>
          <option
            value="Checking"
          >
            Checking
          </option>
        </select>
      </div>
    </div>
    <div
      class="dynamic-form-field dynamic-form-field--accountNumber"
    >
      <div
        class="form-field"
      >
        <label
          class="form-label optimizedCheckout-form-label"
          for="accountNumber"
          id="accountNumber-label"
        >
          Account Number
        </label>
        <input
          aria-labelledby="accountNumber-label accountNumber-field-error-message"
          class="form-input optimizedCheckout-form-input"
          data-test="accountNumber-text"
          id="accountNumber"
          max="9"
          min="8"
          name="accountNumber"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="dynamic-form-field dynamic-form-field--routingNumber"
    >
      <div
        class="form-field"
      >
        <label
          class="form-label optimizedCheckout-form-label"
          for="routingNumber"
          id="routingNumber-label"
        >
          Routing Number
        </label>
        <input
          aria-labelledby="routingNumber-label routingNumber-field-error-message"
          class="form-input optimizedCheckout-form-input"
          data-test="routingNumber-text"
          id="routingNumber"
          name="routingNumber"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="dynamic-form-field dynamic-form-field--ownershipType"
    >
      <div
        class="form-field"
      >
        <label
          class="form-label optimizedCheckout-form-label"
          for="ownershipType"
          id="ownershipType-label"
        >
          Ownership Type
        </label>
        <div
          class="dropdown-chevron"
        >
          <div
            class="icon"
          >
            <svg
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </div>
        <select
          aria-labelledby="ownershipType-label ownershipType-field-error-message"
          class="form-select optimizedCheckout-form-select"
          data-test="ownershipType-select"
          id="ownershipType"
          name="ownershipType"
        >
          <option
            value="Personal"
          >
            Personal
          </option>
          <option
            value="Business"
          >
            Business
          </option>
        </select>
      </div>
    </div>
    <div
      class="dynamic-form-field dynamic-form-field--firstName"
    >
      <div
        class="form-field"
      >
        <label
          class="form-label optimizedCheckout-form-label"
          for="firstName"
          id="firstName-label"
        >
          First Name
        </label>
        <input
          aria-labelledby="firstName-label firstName-field-error-message"
          class="form-input optimizedCheckout-form-input"
          data-test="firstName-text"
          id="firstName"
          name="firstName"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="dynamic-form-field dynamic-form-field--lastName"
    >
      <div
        class="form-field"
      >
        <label
          class="form-label optimizedCheckout-form-label"
          for="lastName"
          id="lastName-label"
        >
          Last Name
        </label>
        <input
          aria-labelledby="lastName-label lastName-field-error-message"
          class="form-input optimizedCheckout-form-input"
          data-test="lastName-text"
          id="lastName"
          name="lastName"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
